css/style.css
/* ... */
/* body {
    position: relative;
} */
.text-align {
    /* align-items: center; */
    text-align: center;
}

/*----------------------------- Heading Styles -----------------------------*/
h1 {
    font-family: var(--headings-font-family);
    line-height: 150%;
    font-weight: bold;
    color: white;
    letter-spacing: 0.5rem;
    font-size: calc(10px + 3.5vw);
    text-shadow: 0px 1px 2px rgb(0 0 0 / 50%);
    margin-top: 260px;
}
h2 {
    font-family: var(--headings-font-family);

}
h3 {
    font-family: var(--headings-font-family);
}
h4 {
    font-family: var(--body-font-family);
    font-weight: 550;
    font-size: 1rem;
    line-height: 1.875;
    letter-spacing: .4rem;
    text-transform: uppercase;
    margin-bottom: 0px;
}
.dark { color: white; }
.light { color: var(--accent-dark-turq); }
h5 {
    font-family: var(--body-font-family);
    font-weight: 400;
    font-size: 1.3rem;
}
h6 {
    font-family: var(--headings-font-family);
    font-weight: 450;
    font-size: 0.9rem;
    color: #F64136;
    padding: 8px 0px 0px 0px; /* top right bottom left */
}
h7 {
    font-family: var(--headings-font-family);
    font-weight: 550;
    font-size: 1rem;
    color: black;
    padding: 0px 0px 0px 0px; /* top right bottom left */
}
p {
    /* font-family: 'Teko', sans-serif; */
    font-family: 'opensans-bold', sans-serif;
    font-weight: 250;
    font-size: 0.9rem;
    line-height: 1.875;
    letter-spacing: .2rem;
}
.dark p { color: #bababa; }
.light p { color: #1C1C1C; }
#home p {
    color: white;
    padding-right: calc(50px + 2vw);
    padding-left: calc(50px + 2vw);
    /* font-size: 0.85rem; */
    font-size: max(0.8rem, 1.5vw);
}
#profile p {
    font-weight: 200;
    font-size: 14px;
    line-height: 1.5;
    letter-spacing: .11rem;
    text-align: left;
}
.section-intro p {
    font-weight: 300;
    font-size: 0.8rem;
    line-height: 1.875;
    letter-spacing: .15rem;
}


/*----------------------------- Section Intro Styles -----------------------------*/
.section-intro {
    display: flex;
    justify-content: center;
    max-width: 700px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    position: relative;
}
.section-intro h2 {
    font-weight: 400;
    font-size: 1rem;
    line-height: 1.5;
    margin-bottom: 1.2rem;
}
.section-intro h2.dark { color: white; }
.section-intro h2.light { color: #1C1C1C; }
.dark .section-intro h2 { color: white; }
.light .section-intro h2 { color: #1C1C1C; }

.section-intro h3 {
    font-weight: 400;
    font-size: 0.6rem;
    line-height: 1.875;
    margin-bottom: 0.3rem;
    letter-spacing: .2rem;
}

.dark .section-intro h3 { color: var(--accent-light-turq); }
.light .section-intro h3 { color: var(--accent-dark-turq); }


/*----------------------------- Lists -----------------------------*/
ul {
    font-weight: 250;
    font-size: 0.8rem;
    line-height: 1.875;
    letter-spacing: .15rem;
    color: #bababa;
    list-style: none outside;
    list-style-type: none;
}

/*----------------------------- Navigation Bar -----------------------------*/
/* ul#nav li a:active { background-color: transparent !important; } */
ul#nav {
    min-height: 48px;
    width: 100%;
    text-align: center;
    display: flex;
    justify-content: center;
}
ul#nav li {
    list-style: none;
    height: 36px;
    display: inline-block;
}
ul#nav li a {
    font-family: var(--body-font-family);
    /* font-size: max(11pt, 1vw); */
    font-size: 10px;
    font-weight: 500;
    text-transform: uppercase;
    letter-spacing: 1.5px;
    padding: 8px 13px;
    line-height: 50px;
    text-decoration: none;
    color: #fff;
}
/* ul#nav li a:active {
    color: black;
} */
ul#nav a.active {
    color: var(--accent-light-turq);
}
#nav-wrap {
    width: 100%;
    /* height: 5.2rem; */
    /* height: 3em; */
    height: max(3rem, 4vw);
    letter-spacing: 2.5px;
    z-index: 100;
    position: fixed;
    background-color: #1C1C1C;
    /* backdrop-filter: invert(80%) blur(10px); */
    /* display: flex; */
}

/*----------------------------- Header Styles -----------------------------*/
header {
    position: relative;
    height: 100vh;
    /* min-height: 500px; */
    width: 100%;
    background: url(../img/lake1.png) no-repeat top center;
    background-size: cover !important;
    -webkit-background-size: cover !important;
    text-align: center;
    overflow: hidden;
}
.top {
    width: 100%;
    height: 702px;
    background-size: cover;
    background-repeat: no-repeat;
    vertical-align: middle;
    margin: 0 auto;
}
header .social {
    /* display: flex; */
    text-shadow: 0px 1px 2px rgb(0 0 0 / 80%);
    align-items: center;
    padding: 0;
}
header .social li a {
    color: #fff;
}
header .social li {
    display: inline-block;
    margin: 0 10px;
    padding: 0;
}
li {
    line-height: 18px;
}

/*----------------------------- About Section -----------------------------*/
#about {
    background-color: #1C1C1C;
    padding-top: 90px;
    padding-bottom: 50px;
    margin: 0px;
    min-height: 100vh;
}
img#profile-img {
    position: relative;
    bottom: 0px;
    width: 100px;
    object-fit: cover;
    border-radius: 50%;
    /* margin: 0rem 1rem 0rem 1rem; */
}
#profile {
    text-align: center;
}
#profile div.row.justify-content-center {
    --bs-gutter-x: 0;
}
.test1 {
    padding: 0!important;
    margin: 0px; /* top right bottom left */
}
#test2 {
    margin: 0px 1rem 0px 0px!important; /* top right bottom left */
}
#about #about-me {
    align-items: normal;
}
.pt-5#profile-left, .pt-5#profile-right {
    padding-top: 3vh!important;
}
.about-content {
    max-width: 850px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    position: relative;
}
.profile-skills-content {
    max-width: 900px;
    margin-left: auto;
    margin-right: auto;
    text-align: left;
    position: relative;
}
/* ... */

